AUTO_FILES(".." "src" "\\.(cpp|h)$")
AUTO_FILES("." "src" "\\.(cpp|h)$")
include_directories(${COMMON_INCLUDE_DIR})
link_directories(${COMMON_LIBRARY_DIR})
if(WIN32)
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
  set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /MT")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
  set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MT")
endif()
ADD_EXE(icn2ico "${src}")
target_link_libraries(icn2ico PVRTexLib)
if(WIN32)
  set_target_properties(icn2ico PROPERTIES LINK_FLAGS_DEBUG "/NODEFAULTLIB:LIBCMT")
endif()
install(TARGETS icn2ico DESTINATION bin)
